--- a/src/app/hale-modules/home/home.tmpl.html
+++ b/src/app/hale-modules/home/home.tmpl.html
@@ -2,19 +2,19 @@
     <div layout="row" layout-align="center center">
 
         <h2 class="md-headline w300" translate>
-        	{{ home.tester}} SolarHale is a platform to standardize the information, design and contracts for residential solar customers - {{ home.templates }}
+        	CrowdSmart better predicts startup success
         </h2>
     </div>
 
     <md-tabs class="md-primary" md-selected="selectedTabIndex" md-dynamic-height="true" md-stretch-tabs="always">
-		    <md-tab label="Own">
+		    <md-tab label="Accelerators">
 		        <md-content class="md-padding">
-		           <h3 class='w300'>Top Systems</h3>
+		           <h3 class='w300'>Top 5</h3>
 		           <md-list >
 							    <md-list-item class="md-2-line" style='padding:5px 0px 5px 0px;'>
 							        <img ng-src="http://sraint.com/wp-content/uploads/2013/06/jeb.jpg" class="md-avatar" " />
 							        <div class="md-list-item-text">
-							            <h3>Fixie Quick</h3>
+							            <h3>Boom Rocket</h3>
 							            <p>Brunch kinfolk artisan bitters art party, chambray chillwave pour-over everyday carry cold-pressed. Fanny pack man braid semiotics aesthetic messenger bag, gluten-free everyday carry letterpress vegan sartorial irony pitchfork.</p>
 							        </div>
 							    </md-list-item>
@@ -22,7 +22,7 @@
 							    <md-list-item class="md-2-line md-padding" style='padding:5px 0px 5px 0px;'>
 							        <img ng-src="https://ecoaltenergy.files.wordpress.com/2013/07/professional-solar-panel-installation-toronto-eco-alternative-energy.jpg" class="md-avatar" " />
 							        <div class="md-list-item-text">
-							            <h3>Sustainator</h3>
+							            <h3>Phoenix Flyer</h3>
 							            <p>Messenger bag single-origin coffee ramps, gochujang bespoke bitters plaid banjo selfies shabby chic truffaut hoodie seitan. Pickled wayfarers gluten-free, disrupt try-hard art party polaroid four dollar toast synth butcher fanny pack. Chillwave locavore small batch poutine farm-to-table sustainable aesthetic, listicle artisan</p>
 							        </div>
 							    </md-list-item>
@@ -30,7 +30,7 @@
 							    <md-list-item class="md-2-line md-padding" style='padding:5px 0px 5px 0px;''>
 							        <img ng-src="http://www.byexample.net/library/illustrations/power_system/solar_power_system.jpg" class="md-avatar" " />
 							        <div class="md-list-item-text">
-							            <h3>Homestead Pro</h3>
+							            <h3>Icarus</h3>
 							            <p>Brunch distillery intelligentsia food truck you probably haven't heard of them marfa. Trust fund put a bird on it tote bag yuccie, bespoke post-ironic meggings freegan viral offal. Cliche bicycle rights literally, slow-carb iPhone neutra food truck chambray photo booth cornhole chia bespoke thundercats umami kale chips</p>
 							        </div>
 							    </md-list-item>
@@ -38,9 +38,14 @@
 							</md-list>
 		        </md-content>
 		    </md-tab>
-		    <md-tab label="Rent">
+		    <md-tab label="Startups">
 		        <md-content class="md-padding">
-		            <h3>Community Solar Options</h3>
+		            <h3>we have the best</h3>
+		        </md-content>
+		    </md-tab>
+		     <md-tab label="Investors">
+		        <md-content class="md-padding">
+		            <h3>We make you money</h3>
 		        </md-content>
 		    </md-tab>
 		</md-tabs>
