--- a/src/app/examples/dashboards/analytics/dashboard-analytics.tmpl.html
+++ b/src/app/examples/dashboards/analytics/dashboard-analytics.tmpl.html
@@ -5,47 +5,47 @@
                 <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-comments"></md-icon>
             </div>
             <div layout="column" layout-align="center end">
-                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0 text-ellipsis" countupto="54" decimals="0"></p>
-                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Comments</p>
+                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0 text-ellipsis" countupto="2314" decimals="0"></p>
+                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>New Comments</p>
             </div>
         </tri-widget>
         <tri-widget palette-background="triCyan:500" content-layout="row" content-layout-align="space-between center" content-padding>
             <div>
-                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-twitter"></md-icon>
+                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-cog"></md-icon>
             </div>
             <div layout="column" layout-align="center end">
                 <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0 text-ellipsis" countupto="101" decimals="0"></p>
-                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Tweets</p>
+                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>New Startups</p>
             </div>
         </tri-widget>
         <tri-widget palette-background="indigo:500" content-layout="row" content-layout-align="space-between center" content-padding>
             <div>
-                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-facebook"></md-icon>
+                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-users"></md-icon>
             </div>
             <div layout="column" layout-align="center end">
-                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0" countupto="943" decimals="0"></p>
-                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Likes</p>
+                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0" countupto="12" decimals="0"></p>
+                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Upcoming Events</p>
             </div>
         </tri-widget>
         <tri-widget palette-background="teal:500" content-layout="row" content-layout-align="space-between center" content-padding>
             <div>
-                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-eye"></md-icon>
+                <md-icon class="font-size-5 opacity-50 margin-left-10" md-font-icon="fa fa-usd"></md-icon>
             </div>
             <div layout="column" layout-align="center end">
-                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0" countupto="944" decimals="0"></p>
-                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Reach</p>
+                <p class="md-display-3 font-weight-100 margin-top-0 margin-bottom-0"  decimals="0">145 M</p>
+                <p class="md-body-2 opacity-60 margin-top-0 margin-bottom-0" translate>Total Funding</p>
             </div>
         </tri-widget>
     </div>
     <div layout="row" layout-xs="column" layout-margin>
-        <tri-widget chartjs-line-widget title="Pageviews & Visits" subtitle="11/03/15 - 11/4/15" content-layout="row" content-padding>
+        <tri-widget chartjs-line-widget title="Trending Themes" subtitle="06/03/16 - 08/01/16" content-layout="row" content-padding>
             <canvas flex class="chart-line" chart-data="lineChart.data" chart-labels="lineChart.labels" chart-legend="true" chart-series="lineChart.series" chart-options="lineChart.options"></canvas>
         </tri-widget>
-        <tri-widget chartjs-pie-widget title="Network Referrals" subtitle="11/03/15 - 11/4/15" content-padding>
+        <tri-widget chartjs-pie-widget title="Popular Industries" subtitle="06/03/16 - 08/01/16" content-padding>
             <canvas flex class="chart-pie" chart-data="pieChart.data" chart-legend="true" chart-labels="pieChart.labels"></canvas>
         </tri-widget>
     </div>
-    <div layout="row" layout-xs="column" layout-margin>
+    <!-- <div layout="row" layout-xs="column" layout-margin>
         <tri-widget flex load-data-widget="{ referrals: 'app/examples/dashboards/data/referrals.json' }" title="Referral Traffic" subtitle="11/03/15 - 11/4/15" content-padding>
             <table class="table">
                 <thead>
@@ -93,5 +93,5 @@
                 </tbody>
             </table>
         </tri-widget>
-    </div>
+    </div> -->
 </div>
