--- a/src/app/layouts/leftsidenav/leftsidenav.tmpl.html
+++ b/src/app/layouts/leftsidenav/leftsidenav.tmpl.html
@@ -1,9 +1,9 @@
 <md-toolbar class="sidebar-left-toolbar" md-theme="{{::triSkin.elements.logo}}">
     <div class="md-toolbar-tools" layout="row" layout-align="start center">
 
-        <div class="sidebar-left-logo">
+<!--         <div class="sidebar-left-logo">
             <img ng-src="{{::vm.sidebarInfo.appLogo}}" alt="{{::vm.sidebarInfo.appName}}">
-        </div>
+        </div> -->
 
         <h2 flex class="sidebar-left-title">{{::vm.sidebarInfo.appName}}</h2>
 
